--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>My Portfolio</h1>
+    <h1 style="margin-left: 50px;">My Portfolio</h1>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -22,7 +22,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <img style="position: absolute; top: 45px;right: 80px;margin: auto; padding:5px;" src="https://lh3.googleusercontent.com/ogw/AGvuzYYEenO3wc1u1m7TOtYDi70CGS8ylHdMtqTn5MrFmU8=s32-c-mo" alt="image-icon"/>
+    <img style="position: absolute; top: 40px;right: 80px;margin: auto; padding:5px;" src="https://lh3.googleusercontent.com/ogw/AGvuzYYEenO3wc1u1m7TOtYDi70CGS8ylHdMtqTn5MrFmU8=s32-c-mo" alt="image-icon"/>
   </header>
 
   <div class="content" id="home">
@@ -86,14 +86,14 @@
       <textarea class="contact-form" id="message" name="message" rows="4" required></textarea><br>
       <input style="margin-left: 1px; padding: 10px;" type="submit" value="Send Message">
     </form>
+    <div class="imp-link">
+      <ul>
+        <li><a href="https://github.com/aritra0609" alt="Github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/aritra-ganguly-5a210b224/" alt="LinkedIn">LinkedIn</a></li>
+      </ul>
+  </div>   
     <p>Contact: 9433336391</p>
     <p>Email: aritraganguly2019@gmail.com</p>
-    <div class="imp-link">
-        <ul>
-          <li><a href="https://github.com/aritra0609" alt="Github">Github</a></li>
-          <li><a href="https://www.linkedin.com/in/aritra-ganguly-5a210b224/" alt="LinkedIn">LinkedIn</a></li>
-        </ul>
-    </div>   
   </div>
   <script>
     document.querySelectorAll('nav a').forEach(anchor => {
