--- a/index.html
+++ b/index.html
@@ -27,21 +27,23 @@
 
   <div class="content" id="home">
     <h2>Welcome to My Portfolio</h2>
-    <p style="line-height:2;">Hi, my name is Aritra Ganguly.
-        I am a frontend developer with a passion for creating visually
-         appealing and user-friendly websites.<br>
-        Skilled in HTML, CSS, JavaScript and ReactJS, I strive to deliver 
-        exceptional user experiences through 
-        clean and responsive designs.<br>I am actively looking for internship opportunities.
-    </p>
+    <ul style="font-size: medium; line-height: 40px;">
+        <li> Hi, my name is Aritra Ganguly.</li>
+        <li> I am a frontend developer with a passion for creating visually
+            appealing and user-friendly websites.</li>
+        <li> I strive to deliver exceptional user experiences through 
+            clean and responsive designs.</li>
+        <li>I am actively looking for internship opportunities.</li>
+    </ul>
   </div>
 
   <div class="content" id="about">
     <h2>Education</h2>
-    <p>Class XII - Sri Aurobindo Vidyamandir,Chandernagore (2019 -'21) (95.6%)</p>
-    <p>B.Tech in Information Technology - University of Calcutta(2021 -'25)<br><br>
-       Grade - 8.95 SGPA (Semester-III)
-    </p>
+    <ul style="font-size: medium; line-height: 40px;">
+        <li>Class XII - Sri Aurobindo Vidyamandir,Chandernagore (2019 -'21) (95.6%)</li>
+        <li>B.Tech in Information Technology - University of Calcutta (2021 -'25)<br>
+            Grade - 8.95 SGPA (Semester-III)</li>
+    </ul>
   </div>
 
   <div class="content" id="skills">
@@ -64,16 +66,16 @@
     </ul>
     <a style="text-decoration: none;margin-left: 20px;" href="" alt="certificate">Click to see completion certificate</a>
   </div>
-
   <div class="content" id="project">
     <h2>Projects</h2>
-    <p>Calculator Project using HTML, CSS, JS</p>
-    <a style="text-decoration: none;" href="https://aritra0609.github.io/Aritra-s-Calculator-using-HTML-CSS-JS/" alt="calculator">Click here to see the project</a>
-    <p>Personal Portfolio Website using HTML, CSS, JS</p>
-    <a style="text-decoration: none;" href="http://127.0.0.1:5500/CSSprojects/portfolio/index.html" alt="portfolio">Click here to see the project</a>
- 
-  </div>
-
+    <ul style="font-size: medium; line-height: 40px;">
+        <li>Calculator Project using HTML, CSS, JS</li>
+        <a style="text-decoration: none;" href="https://aritra0609.github.io/Aritra-s-Calculator-using-HTML-CSS-JS/" alt="calculator">Click here to see the project</a>
+        <li>Responsive Personal Portfolio Website using HTML, CSS, JS (Smooth Scrolling Functionality Enabled)</li>
+        <a style="text-decoration: none;" href="http://127.0.0.1:5500/CSSprojects/portfolio/index.html" alt="portfolio">Click here to see the project</a>
+        <li> Responsive Photography Page- Utilizing Flexbox, Grid and MediaQuery with Transition Effects</li>
+        <a style="text-decoration: none;" href="https://aritra0609.github.io/Animated-photography-front-page/" alt="photography-page">Click here to see the project</a>
+   </div>
   <div class="content" id="contact">
     <h2>Contact Me</h2>
     <p>Feel free to reach out to me using the form below:</p>
@@ -106,7 +108,7 @@
   });
   </script>
   <footer>
-    &copy; 2023 My Portfolio. All rights reserved.
+    &copy; 2023 A.Ganguly . All rights reserved.
   </footer>
 </body>
 
