--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,10 +50,11 @@
     <ul >
       <li style="margin-bottom: 10px;">HTML5</li>
       <li style="margin-bottom: 10px;">CSS3</li>
-      <li style="margin-bottom: 10px;">JavaScript</li>
       <li style="margin-bottom: 10px;">Tailwind CSS</li>
+      <li style="margin-bottom: 10px;">Bootstrap</li>
+      <li style="margin-bottom: 10px;">JavaScript</li>
       <li style="margin-bottom: 10px;">JQuery</li> 
-      <li>React</li>
+      <li>ReactJS</li>
     </ul>
   </div>
 
@@ -64,7 +64,27 @@
       <li>ReactJS- complete guide for frontend web development by Udemy<br><br>
       (This is a 22 hours long course including HTML5, CSS3, Javascript, ES6, JQuery, ReactJS)</li>
     </ul>
-    <a style="text-decoration: none;margin-left: 20px;" href="" alt="certificate">Click to see completion certificate</a>
+    <a style="text-decoration: none;margin-left: 20px;" href="https://www.udemy.com/certificate/UC-f41b12a9-d3d2-4b29-ba41-cec1134b242b/" alt="certificate">Click to see completion certificate</a>
+    <p style="font-weight: bold; margin-left: 20px;">Course related code links</p>
+    <ul style="line-height: 30px;">
+      <li >Invoice Table - HTML5</li>
+      <a style="text-decoration: none;"  href="https://github.com/aritra0609/ReactJS-Udemy-course-project-invoice-table" alt="invoice-table">Click the link</a>
+      <li >Forms - HTML5</li>
+      <a style="text-decoration: none; "  href="https://github.com/aritra0609/ReactJS-Udemy-course-project-forms" alt="forms">Click the link</a>
+      <li >Google Replica - CSS3</li>
+      <a style="text-decoration: none;"  href="https://github.com/aritra0609/ReactJS-udemy-project-googleReplica" alt="google-replica">Click the link</a>
+      <li>Responsive Photography Catalogue - CSS3</li>
+      <a style="text-decoration: none; "  href="https://github.com/aritra0609/Animated-photography-front-page" alt="photogtaphy">Click the link</a>
+      <li >Facebook Login Desktop Replica - Tailwind CSS</li>
+      <a style="text-decoration: none;"  href="https://github.com/aritra0609/aritra0609-Facebook-Desktop-Login-Tailwind-CSS-" alt="tailwind-css">Click the link</a>      
+      <li>Calculator- Javascript</li>
+      <a style="text-decoration: none;"  href="https://github.com/aritra0609/Aritra-s-Calculator-using-HTML-CSS-JS" alt="calculator">Click the link</a>
+      <li >Responsive Personal Portfolio</li>
+      <a style="text-decoration: none;"  href="https://github.com/aritra0609/Responsive-personal-portfolio-website" alt="portfolio">Click the link</a> 
+      <li >TODO LIST- ReactJS</li>
+      <a style="text-decoration: none;"  href="https://github.com/aritra0609/TodoList-ReactJS" alt="todo">Click the link</a>      
+        
+      </ul>
   </div>
   <div class="content" id="project">
     <h2>Projects</h2>
@@ -73,8 +93,14 @@
         <a style="text-decoration: none;" href="https://aritra0609.github.io/Aritra-s-Calculator-using-HTML-CSS-JS/" alt="calculator">Click here to see the project</a>
         <li>Responsive Personal Portfolio Website using HTML, CSS, JS (Smooth Scrolling Functionality Enabled)</li>
         <a style="text-decoration: none;" href="http://127.0.0.1:5500/CSSprojects/portfolio/index.html" alt="portfolio">Click here to see the project</a>
+        <li>Todo List - ReactJS</li>
+        <a style="text-decoration: none;" href="https://aritra-todo-list-react.netlify.app/" alt="todo">Click here to see the project</a>
+      
         <li> Responsive Photography Page- Utilizing Flexbox, Grid and MediaQuery with Transition Effects</li>
         <a style="text-decoration: none;" href="https://aritra0609.github.io/Animated-photography-front-page/" alt="photography-page">Click here to see the project</a>
+        <li>Facebook Login Desktop Replica - Tailwind CSS</li>
+        <a style="text-decoration: none;" href="https://aritra-fb-login-desktop-replica.netlify.app/" alt="photography-page">Click here to see the project</a>
+ 
    </div>
   <div class="content" id="contact">
     <h2>Contact Me</h2>
