--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <li>Calculator Project using HTML, CSS, JS</li>
         <a style="text-decoration: none;" href="https://aritra0609.github.io/Aritra-s-Calculator-using-HTML-CSS-JS/" alt="calculator">Click here to see the project</a>
         <li>Responsive Personal Portfolio Website using HTML, CSS, JS (Smooth Scrolling Functionality Enabled)</li>
-        <a style="text-decoration: none;" href="http://127.0.0.1:5500/CSSprojects/portfolio/index.html" alt="portfolio">Click here to see the project</a>
+        <a style="text-decoration: none;" href="https://aritra0609.github.io/Responsive-personal-portfolio-website/" alt="portfolio">Click here to see the project</a>
         <li>Todo List - ReactJS</li>
         <a style="text-decoration: none;" href="https://aritra-todo-list-react.netlify.app/" alt="todo">Click here to see the project</a>
       
