--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <li>Calculator Project using HTML, CSS, JS</li>
         <a style="text-decoration: none;" href="https://aritra0609.github.io/Aritra-s-Calculator-using-HTML-CSS-JS/" alt="calculator">Click here to see the project</a>
         <li>Responsive Personal Portfolio Website using HTML, CSS, JS (Smooth Scrolling Functionality Enabled)</li>
-        <a style="text-decoration: none;" href="https://aritra0609.github.io/Responsive-personal-portfolio-website/" alt="portfolio">Click here to see the project</a>
+        <a style="text-decoration: none;" href="https://aritra-personalportfolio-web.netlify.app/" alt="portfolio">Click here to see the project</a>
        <li> Responsive Photography Page- Utilizing Flexbox, Grid and MediaQuery with Transition Effects</li>
         <a style="text-decoration: none;" href="https://aritra0609.github.io/Animated-photography-front-page/" alt="photography-page">Click here to see the project</a>
         <li>Todo List - ReactJS</li>
