--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <div class="content" id="about">
     <h2>Education</h2>
     <ul style="font-size: medium; line-height: 40px;">
-        <li>Class XII - Sri Aurobindo Vidyamandir,Chandernagore (2019 -'21) (95.6%)</li>
-        <li>B.Tech in Information Technology - University of Calcutta (2021 -'25)<br>
+        <li>Class XII - Sri Aurobindo Vidyamandir,Chandernagore (2019 - 2021) (95.6%)</li>
+        <li>B.Tech in Information Technology - University of Calcutta (2021 - 2025)<br>
             Grade - 8.95 SGPA (Semester-III)</li>
     </ul>
   </div>
@@ -48,12 +48,12 @@
   <div class="content" id="skills">
     <h2>Skills</h2>
     <ul >
-      <li style="margin-bottom: 10px;">HTML5</li>
-      <li style="margin-bottom: 10px;">CSS3</li>
-      <li style="margin-bottom: 10px;">Tailwind CSS</li>
-      <li style="margin-bottom: 10px;">Bootstrap</li>
-      <li style="margin-bottom: 10px;">JavaScript</li>
-      <li style="margin-bottom: 10px;">JQuery</li> 
+      <li >HTML5</li>
+      <li >CSS3</li>
+      <li >Tailwind CSS</li>
+      <li >Bootstrap</li>
+      <li >JavaScript</li>
+      <li >JQuery</li> 
       <li>ReactJS</li>
     </ul>
   </div>
@@ -69,38 +69,39 @@
     <p style="font-weight: bold; margin-left: 20px;">Course related code links</p>
     <ul style="line-height: 30px;">
       <li >Invoice Table - HTML5</li>
-      <a style="text-decoration: none;"  href="https://github.com/aritra0609/ReactJS-Udemy-course-project-invoice-table" alt="invoice-table">Click the link</a>
+      <a   href="https://github.com/aritra0609/ReactJS-Udemy-course-project-invoice-table" alt="invoice-table">Click the link</a>
       <li >Forms - HTML5</li>
-      <a style="text-decoration: none; "  href="https://github.com/aritra0609/ReactJS-Udemy-course-project-forms" alt="forms">Click the link</a>
+      <a   href="https://github.com/aritra0609/ReactJS-Udemy-course-project-forms" alt="forms">Click the link</a>
       <li >Google Replica - CSS3</li>
-      <a style="text-decoration: none;"  href="https://github.com/aritra0609/ReactJS-udemy-project-googleReplica" alt="google-replica">Click the link</a>
+      <a   href="https://github.com/aritra0609/ReactJS-udemy-project-googleReplica" alt="google-replica">Click the link</a>
       <li>Responsive Photography Catalogue - CSS3</li>
-      <a style="text-decoration: none; "  href="https://github.com/aritra0609/Animated-photography-front-page" alt="photogtaphy">Click the link</a>
+      <a   href="https://github.com/aritra0609/Animated-photography-front-page" alt="photogtaphy">Click the link</a>
       <li >Facebook Login Desktop Replica - Tailwind CSS</li>
-      <a style="text-decoration: none;"  href="https://github.com/aritra0609/aritra0609-Facebook-Desktop-Login-Tailwind-CSS-" alt="tailwind-css">Click the link</a>      
+      <a  href="https://github.com/aritra0609/aritra0609-Facebook-Desktop-Login-Tailwind-CSS-" alt="tailwind-css">Click the link</a>      
       <li>Calculator- Javascript</li>
-      <a style="text-decoration: none;"  href="https://github.com/aritra0609/Aritra-s-Calculator-using-HTML-CSS-JS" alt="calculator">Click the link</a>
+      <a  href="https://github.com/aritra0609/Aritra-s-Calculator-using-HTML-CSS-JS" alt="calculator">Click the link</a>
       <li >Responsive Personal Portfolio</li>
-      <a style="text-decoration: none;"  href="https://github.com/aritra0609/Responsive-personal-portfolio-website" alt="portfolio">Click the link</a> 
+      <a  href="https://github.com/aritra0609/Responsive-personal-portfolio-website" alt="portfolio">Click the link</a> 
       <li >TODO LIST- ReactJS</li>
-      <a style="text-decoration: none;"  href="https://github.com/aritra0609/TodoList-ReactJS" alt="todo">Click the link</a>      
+      <a  href="https://github.com/aritra0609/TodoList-ReactJS" alt="todo">Click the link</a>      
         
       </ul>
   </div>
-  <div class="content" id="project">
+  <div class="content">
     <h2>Projects</h2>
     <ul style="font-size: medium; line-height: 40px;">
         <li>Calculator Project using HTML, CSS, JS</li>
-        <a style="text-decoration: none;" href="https://aritra0609.github.io/Aritra-s-Calculator-using-HTML-CSS-JS/" alt="calculator">Click here to see the project</a>
+        <a  href="https://aritra0609.github.io/Aritra-s-Calculator-using-HTML-CSS-JS/" alt="calculator">Click here to see the project</a>
         <li>Responsive Personal Portfolio Website using HTML, CSS, JS (Smooth Scrolling Functionality Enabled)</li>
-        <a style="text-decoration: none;" href="https://aritra-personalportfolio-web.netlify.app/" alt="portfolio">Click here to see the project</a>
-       <li> Responsive Photography Page- Utilizing Flexbox, Grid and MediaQuery with Transition Effects</li>
-        <a style="text-decoration: none;" href="https://aritra0609.github.io/Animated-photography-front-page/" alt="photography-page">Click here to see the project</a>
+        <a  href="https://aritra-personalportfolio-web.netlify.app/" alt="portfolio">Click here to see the project</a>
         <li>Todo List - ReactJS</li>
-        <a style="text-decoration: none;" href="https://aritra-todo-list-react.netlify.app/" alt="todo">Click here to see the project</a>  
+        <a  href="https://aritra-todo-list-react.netlify.app/" alt="todo">Click here to see the project</a>
+      
+        <li> Responsive Photography Page- Utilizing Flexbox, Grid and MediaQuery with Transition Effects</li>
+        <a  href="https://aritra0609.github.io/Animated-photography-front-page/" alt="photography-page">Click here to see the project</a>
         <li>Facebook Login Desktop Replica - Tailwind CSS</li>
-        <a style="text-decoration: none;" href="https://aritra-fb-login-desktop-replica.netlify.app/" alt="photography-page">Click here to see the project</a>
- 
+        <a  href="https://aritra-fb-login-desktop-replica.netlify.app/" alt="photography-page">Click here to see the project</a>
+        <ul/>
    </div>
   <div class="content" id="contact">
     <h2>Contact Me</h2>
@@ -116,8 +117,8 @@
     </form>
     <div class="imp-link">
       <ul>
-        <li><a href="https://github.com/aritra0609" alt="Github">Github</a></li>
-        <li><a href="https://www.linkedin.com/in/aritra-ganguly-5a210b224/" alt="LinkedIn">LinkedIn</a></li>
+        <li><a style="color: blueviolet;" href="https://github.com/aritra0609" alt="Github">Github</a></li>
+        <li><a style="color: blueviolet;" href="https://www.linkedin.com/in/aritra-ganguly-5a210b224/" alt="LinkedIn">LinkedIn</a></li>
       </ul>
   </div>   
     <p>Contact: 9433336391</p>
