--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         
       </ul>
   </div>
-  <div class="content">
+  <div class="content" id="project">
     <h2>Projects</h2>
     <ul style="font-size: medium; line-height: 40px;">
         <li>Calculator Project using HTML, CSS, JS</li>
